RESOLVED FIXED291181
[WebGPU] Nullptr crash in RenderBundleEncoder when device is invalid
https://bugs.webkit.org/show_bug.cgi?id=291181
Summary [WebGPU] Nullptr crash in RenderBundleEncoder when device is invalid
Mike Wyrzykowski
Reported 2025-04-06 21:29:53 PDT
[WebGPU] Nullptr crash in RenderBundleEncoder when device is invalid
Attachments
Mike Wyrzykowski
Comment 1 2025-04-06 21:30:09 PDT
Mike Wyrzykowski
Comment 2 2025-04-06 21:37:00 PDT
EWS
Comment 3 2025-04-07 13:55:30 PDT
Committed 293376@main (9effe61c252b): <https://commits.webkit.org/293376@main> Reviewed commits have been landed. Closing PR #43728 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.