[WebGPU] Nullptr crash in RenderBundleEncoder when device is invalid https://bugs.webkit.org/show_bug.cgi?id=291181 rdar://148709778

Reviewed by Cameron McCormack.

We were allowing encoding of commands when the device was nil, leading
to a nullptr crash.

It is invalid to encode commands on an invalid device, so add this condition
to RenderBundleEncoder::validToEncodeCommand.

* LayoutTests/fast/webgpu/nocrash/fuzz-291181-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-291181.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::validToEncodeCommand const):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::RenderPipeline::recomputeLastStrideAsStride const):
Add release assertion, as this should never be called on a nil device.

* LayoutTests/fast/webgpu/nocrash/fuzz-291181-reduced-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-291181-reduced.html: Added.
Reduced regression test.

Canonical link: https://commits.webkit.org/293376@main