Source/WebGPU/WebGPU/RenderBundleEncoder.mm
@@ -983,6 +983,9 @@ void RenderBundleEncoder::endCurrentICB()
 
 bool RenderBundleEncoder::validToEncodeCommand() const
 {
+    if (!m_device->isValid())
+        return false;
+
     return !m_finished || (m_renderPassEncoder && RefPtr { m_renderPassEncoder.get() }->renderCommandEncoder() && !m_makeSubmitInvalid);
 }
 
